@@ -21,7 +21,7 @@ namespace HauntedHouseSoftware.SecureNotePad.CryptoProviders
 {
     public interface IAES
     {
-        byte[] Decrypt(byte[] dataToDecrypt, string password, byte[] salt);
-        byte[] Encrypt(byte[] dataToEncrypt, string password, byte[] salt);
+        byte[] Decrypt(byte[] dataToDecrypt, string password, byte[] salt, int pbkdfRounds);
+        byte[] Encrypt(byte[] dataToEncrypt, string password, byte[] salt, int pbkdfRounds);
     }
 }
